# textin-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/textin_mcp/: __init__.py  file_base64.py  server.py
tests/: test_file_base64.py  test_server.py
