[project]
name = "textin-mcp"
version = "0.1.0"
description = "SSE MCP server for TextIn xParse document parsing."
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.27.0",
    "xparse-client>=0.3.0",
]

[project.scripts]
textin-mcp = "textin_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
